# VirtualEmail

./: .gitignore
core/rust/email_server/: Cargo.toml
core/rust/email_server/src/: errors.rs  main.rs
core/rust/email_server/src/io/: io_handler.rs  mod.rs
core/rust/email_server/src/models/: models.rs
core/rust/email_server/src/session/: session.rs
web/: index.html  login.html  register.html  send_form.html
web/style/: index.css  register.css
