[package]
name = "email_server"
version = "0.1.0"
authors = ["Elias Trummer <trueld17@htl-kaindorf.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.6"

serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.44"

uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argonautica = "0.2.0"
biscuit = "0.4.1"
derive_more = "0.99.2"

async-std = "1.5"
rand = "0.7.3"